--- a/goatsports/goatsports/Base.lproj/Main.storyboard
+++ b/goatsports/goatsports/Base.lproj/Main.storyboard
@@ -206,5 +206,38 @@
             </objects>
             <point key="canvasLocation" x="796" y="-1299.400299850075"/>
         </scene>
+        <!--Root View-->
+        <scene sceneID="C7r-r0-g4O">
+            <objects>
+                <viewController storyboardIdentifier="Playview" id="S6s-jz-oQ1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TTl-2W-nKc"/>
+                        <viewControllerLayoutGuide type="bottom" id="b2w-G9-1zI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4tO-w3-1E3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cIz-oF-MIB">
+                                <rect key="frame" x="27" y="20" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="backMainView:" destination="pIM-yw-aB0" eventType="touchUpInside" id="o0Y-HV-nDo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1kT-Py-4eV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="pIM-yw-aB0" customClass="VCPlayVideo">
+                    <connections>
+                        <outlet property="rootView" destination="S6s-jz-oQ1" id="0LB-AX-QuC"/>
+                    </connections>
+                </customObject>
+            </objects>
+            <point key="canvasLocation" x="1457" y="-1343"/>
+        </scene>
     </scenes>
 </document>
