--- a/goatsports/goatsports/Base.lproj/Main.storyboard
+++ b/goatsports/goatsports/Base.lproj/Main.storyboard
@@ -218,8 +218,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zyp-2G-CvG">
+                                <rect key="frame" x="16" y="158" width="343" height="212"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cIz-oF-MIB">
-                                <rect key="frame" x="27" y="20" width="46" height="30"/>
+                                <rect key="frame" x="16" y="20" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
@@ -233,11 +238,13 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1kT-Py-4eV" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="pIM-yw-aB0" customClass="VCPlayVideo">
                     <connections>
+                        <outlet property="playerView" destination="Zyp-2G-CvG" id="K9v-tk-Oke"/>
                         <outlet property="rootView" destination="S6s-jz-oQ1" id="0LB-AX-QuC"/>
+                        <outlet property="showPlayerView" destination="Zyp-2G-CvG" id="b0V-i2-2Pl"/>
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="1457" y="-1343"/>
+            <point key="canvasLocation" x="1456.8" y="-1343.4782608695652"/>
         </scene>
     </scenes>
 </document>
